fix: dark mode in EditInterests

--- a/src/components/Interests/Interests.module.scss
+++ b/src/components/Interests/Interests.module.scss
@@ -14,3 +14,22 @@
     }
   }
 }
+
+.select {
+  .control {
+    background-color: var(--background-color);
+    border: 2px solid var(--text-color);
+    border-radius: 6px;
+  }
+  .input {
+    color: var(--text-color);
+  }
+  .menu {
+    background-color: var(--background-color);
+    color: var(--text-color);
+    box-shadow: 0px 0px 8px var(--text-color);
+  }
+  .separator {
+    display: none;
+  }
+}
